crates/compiler/src/tests/e2e/good/0525_basic_bindings_and_print/main.gom
fn main() {
    let u: unit = ();
    let _ = u;
    println("done");
}
