crates/compiler/src/tests/e2e/bad/0006_bool_arithmetic/main.gom
fn main() -> unit {
  let flag_a: bool = true;
  let flag_b: bool = false;
  let combined = flag_a + flag_b;
  println(combined)
}
